--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -136,6 +136,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-b = 'workspace B'
     alt-e = 'workspace E'
     alt-m = 'workspace M'
+    alt-p = 'workspace P'
     alt-s = 'workspace S'
     alt-t = 'workspace T'
 
@@ -144,6 +145,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-b = 'move-node-to-workspace B'
     alt-shift-e = 'move-node-to-workspace E'
     alt-shift-m = 'move-node-to-workspace M'
+    alt-shift-p = 'move-node-to-workspace P'
     alt-shift-s = 'move-node-to-workspace S'
     alt-shift-t = 'move-node-to-workspace T'
 
@@ -205,3 +207,11 @@ run = "move-node-to-workspace E"
 [[on-window-detected]]
 if.app-id = 'com.apple.finder'
 run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'cc.ffitch.shottr'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.postmanlabs.mac'
+run = 'move-node-to-workspace P'
