--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -81,10 +81,10 @@ set -g default-terminal xterm-256color
 
 
 # resize panes
-bind -r C-h resize-pane -L 5
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
-bind -r C-l resize-pane -R 5
+bind -n C-M-h resize-pane -L 2
+bind -n C-M-j resize-pane -D 1
+bind -n C-M-k resize-pane -U 1
+bind -n C-M-l resize-pane -R 2
 
 bind-key a resize-pane -t 1 -x 70%
 bind-key t display-popup -w 80% -h 60% -E "$SHELL"
